# blueprint

./: .gitignore  pyproject.toml
docs/: backend-spec.md  backend-v1.md  frontend-spec.md  pattern-support-matrix.md
src/blueprint/: __init__.py  cli.py  patterns.py
src/blueprint/coder/: __init__.py  claude.py  codex.py  core.py  openai.py
src/blueprint/compiler/: __init__.py  core.py
src/blueprint/ir/: __init__.py  validator.py
src/blueprint/planner/: __init__.py  core.py
src/blueprint/revisions/: __init__.py  core.py
src/blueprint/schemas/: __init__.py
src/blueprint/schemas/v1/: __init__.py  compiler_lock.schema.json  contract.schema.json  data_model.schema.json  flow.schema.json  ownership.schema.json  policies.schema.json  system.schema.json  unit.schema.json
src/blueprint/verifier/: __init__.py  core.py
tests/: test_claude_adapter.py  test_codex_adapter.py  test_codex_job_run.py  test_compile_ir.py  test_conformance.py  test_create_revision.py  test_execution_diff.py  test_job_manifests.py  test_openai_coder.py  test_patterns.py  test_plan_jobs.py  test_prepare_job_worktree.py  test_run_coder_job.py  test_validate_ir.py  test_verify_execution_result.py  test_verify_job.py  test_verify_repo.py
tests/conformance/cases/abc_contract_basic/: case.yaml
tests/conformance/cases/compiler_overlap/: case.yaml
tests/conformance/cases/duplicate_registry_event/: case.yaml
tests/conformance/cases/flow_call_mismatch/: case.yaml
tests/conformance/cases/layer_violation/: case.yaml
tests/conformance/cases/missing_ownership_file/: case.yaml
(+52 files in other folders)
